HUE-6816 [frontend] Fix flexbox sizing of the popover sample tab on Safari
(cherry picked from commit d469cd3848a10262a910ae9fe5eb26493fd6fda9)

--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -118,8 +118,6 @@
 }
 
 .flex(@flex: initial) {
-  -webkit-box-flex: @flex;
-  -moz-box-flex: @flex;
   -ms-flex: @flex;
   -webkit-flex: @flex;
   flex: @flex;
